--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux-saga": "^1.3.0",
+    "ts-node": "^10.9.2",
     "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "jest-transform-stub": "^2.0.0",
