--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "@testing-library/jest-dom": "^6.6.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.0",
     "react": "^18.3.1",
@@ -20,14 +19,13 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux-saga": "^1.3.0",
-    "ts-node": "^10.9.2",
     "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@jest/globals": "^30.0.0-beta.3",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -35,14 +33,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "jest-transform-stub": "^2.0.0",
-    "ts-jest": "^29.3.4",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.0.0",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^6.0.5"
   }
 }
